Decreased the width of new quote popover to prevent from going off-screen when user's name is short.

--- a/client/css/sections/_new-quote-popover.scss
+++ b/client/css/sections/_new-quote-popover.scss
@@ -1,6 +1,6 @@
 .popover {
   min-width: 200px;
-  max-width: 500px;
+  max-width: 350px;
   border-radius: $border-radius;
 
   .popover-content {
@@ -12,7 +12,7 @@
   margin: 20px;
 
   .form-control {
-    width: 430px;
+    width: 285px;
   }
 
   .btn {
